<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        app:iconSpaceReserved="false"
        app:key="shutter"
        app:summary="@string/disable_shutter_sounds_description"
        app:summaryOn="@string/disable_shutter_sounds_description_on"
        app:title="@string/disable_shutter_sounds_title"
        />
    <SwitchPreference
        app:iconSpaceReserved="false"
        app:key="screenshot"
        app:summary="@string/disable_screenshot_sounds_description"
        app:title="@string/disable_screenshot_sounds_title"
        />
    <SwitchPreference
        app:iconSpaceReserved="false"
        app:key="charging"
        app:title="@string/disable_charging_sounds"
        />
    <SwitchPreference
        app:dependency="charging"
        app:iconSpaceReserved="false"
        app:key="chargingFeedback"
        app:summary="@string/disable_charging_feedback_summary"
        app:title="@string/disable_charging_feedback"
        />
</PreferenceScreen>
